--- a/inst/doc/flowQA.Rnw
+++ b/inst/doc/flowQA.Rnw
@@ -51,16 +51,27 @@
 \noindent \textbf{keywords} Flow cytometry,Quality Assessment, high throughput,svg,flowWorkspace,ncdfFlowSet
 \end{abstract}
 
-<<loadPackage, echo=false,results=hide>>=
+<<loadPackage-flowQA, echo=FALSE,results=hide>>=
 library(flowQA)
 @
 
 \section{Parsing the QA gating template}
-\Rfunction{parseWorkspace} function from \Rpackage{flowWorkspace} package is used to parse the flowJo workspace.
+Optionally, parsing xml workspace can be done in parallel mode. It can speed up the process for large datasets.
+<<loadPackage-parallel, echo=TRUE,results=hide,eval=FALSE>>=
+library(Rmpi)
+library(multicore)
+library(ncdfFlow)
+@
 
+\Rpackage{ncdfFlow} also needs to be loaded in order to support netCDF storage for flow data that will solve the limitation of memory issue, 
+
+
+\Rfunction{parseWorkspace} function from \Rpackage{flowWorkspace} package is used to parse the flowJo workspace.
+If Rmpi and multicore package are loaded and it will automatically switch to the parallel mode and \Robject{nslaves} arugment is used to
+specify the number of computing nodes used.
 <<parseWorkspace, eval=FALSE, echo=TRUE,results=verbatim>>=
 ws<-openWorkspace("~/QA_MFI_RBC_bounary_eventsV3.xml")
-G<-parseWorkspace(ws,execute=TRUE,isNcdf=TRUE)
+G<-parseWorkspace(ws,execute=TRUE,isNcdf=TRUE,nslaves=6)
 saveNcdf("G","gatingHierarchy")
 save(G,file="gatingHierarchy/GS.Rda")
 @
@@ -71,17 +82,26 @@ so that it be loaded directly from disk later on for the further processing
 
 \section{Calculating the statistics}
 This is the second preprocessing step followed by parsing gating template from flowJo workspace. 
-At this step statistics of each gated cell population in the gating hierarchies are calculated and saved in a global environment. 
-
-<<getQAStats, eval=FALSE ,echo=true, results=verbatim>>=
+Firstly,we need to save the gating hierarchies are calculated and the sample annoation data (containing all the meta information about the FCS files and samples) into a global environment. 
+<<saveDB, eval=FALSE ,echo=true, results=verbatim>>=
+anno<-read.csv("~/FCS_File_mapping.csv")###read annotation data
 db<-new.env()
 saveToDB(db,G,anno)
-db<-getQAStats(db,,nslaves=10)
+@ 
+Then statistics of each gated population is extracted and saved in db.Again,\Rfunction{getQAStats} can be speeded up by running in parallel mode.
+It uses \Rpackage{parallel} package and automatically detection the number of computing nodes available. 
+Optionally \Robject{nslaves} arugment can also be provided to manually specify the computing node.
+<<getQAStats, eval=FALSE ,echo=true, results=verbatim>>=
+library(parallel)
+getQAStats(db)
 ls(db)
 db$statsOfGS[1:5,]
 @
-
-Further quality assessment can be performed at different levels after this step is done.
+It is recommened to save all the preprocessed data to avoid the efforts of recomputing from the beginning:
+<<save-all, eval=FALSE ,echo=true, results=verbatim>>=
+save(db,file="ITN029.rda")#save stats
+@
+Once this is done,the more interactive quality assessment task can be performed based on the statistics extracted for each gated population.
 
 \section{Defining qaTasks} 
 
@@ -160,7 +180,7 @@ qaTask.list[["MNC"]]
 This qaTask detects the significant variance of MNC cell population percentage among aliquots,which have the same "coresampleid".
 Plot type of this object tells the method to group data by "coresampleid".   
 <<qaCheck-MNC,  results=verbatim>>=
-qaCheck(qaTask.list[["MNC"]],outlierfunc=qoutlier,alpha=1.5)
+qaCheck(qaTask.list[["MNC"]],z.cutoff=2)
 @
 Interquartile Range based outlier detection function is used to detect outliers
 
@@ -195,21 +215,24 @@ Another three examples:
 QA check of Fluorescence stability overtime using t-distribution based outlier detection function.     
 <<qaCheck-MFIOverTime, fig=true, results=verbatim>>=
 qaCheck(qaTask.list[["MFIOverTime"]]
-		,outlierfunc=outlier.t
-		,rFunc=lm
-		,alpha=0.05
+		,rFunc=rlm
+		,z.cutoff=3
 		)
 
-plot(qaTask.list[["MFIOverTime"]],y=MFI~RecdDt|stain
+plot(qaTask.list[["MFIOverTime"]]
+		,y=MFI~RecdDt|stain
 		,subset="channel%in%c('FITC-A')"
-		,rFunc=lm
+		,rFunc=rlm
+		,relation="free"
 	)
 @
 Note that the linear regression is applied in each group in order to capture the significant MFI change over time.
 The individual outliers within each group is detected based on the residue.
 
 <<plot-spike, fig=true, results=verbatim>>=
-qaCheck(qaTask.list[["spike"]],outlierfunc=outlier.t,alpha=0.00001)
+qaCheck(qaTask.list[["spike"]]
+			,outlierfunc=outlier.t
+			,alpha=0.00001)
 
 plot(qaTask.list[["spike"]],y=spike~RecdDt|channel
 		,subset="Tube=='CD8/CD25/CD4/CD3/CD62L'&channel%in%c('FITC-A')"
@@ -218,8 +241,9 @@ plot(qaTask.list[["spike"]],y=spike~RecdDt|channel
 @
 
 <<plot-RedundantStain, fig=true, results=verbatim>>=
-qaCheck(qaTask.list[["RedundantStain"]],outlierfunc=qoutlier,alpha=1.5)
+qaCheck(qaTask.list[["RedundantStain"]],z.cutoff=1)
 plot(qaTask.list[["RedundantStain"]]
+		,y=percent~coresampleid|channel:stain
 		,subset="stain%in%c('CD8')"
 	)
 @
@@ -231,9 +255,10 @@ generate the summary tables and svg plots. Svg plots provide tooltips containing
 hyperlinks of densityplot for each individual FCS file.  
 
 <<qa.report,eval=FALSE, echo=true, results=verbatim>>=
-qa.report(db,outDir="~/output")
+qa.report(db,outDir="~/output",plotAll=FALSE)
 @
-
+\Robject{plotAll} is the argument to control the plotting of the individual scatter plot for each FCS file. When TRUE, all the FCS files are plotted. If FALSE,only the FCSs marked as
+Outliers will be plotted. It can also be set to "none" meaning that no scatter plot will be generated, which provides the quick review of the html report. 
 \section{Conclusion}
 By the formula-based \Rfunction{qaCheck} and \Rfunction{plot} methods,different QA tasks 
 can be defined and performed in a generic way.
