--- a/inst/doc/QUALIFIER.Rnw
+++ b/inst/doc/QUALIFIER.Rnw
@@ -172,13 +172,14 @@ plot(qaTask.list[["RBCLysis"]])
 By default all the data are plotted,argument "subset" can be used to visualize a small subset.
  
 <<plot-RBCLysis-subset, fig=true, results=verbatim>>=
-plot(qaTask.list[["RBCLysis"]],subset="Tube=='CD8/CD25/CD4/CD3/CD62L'")
+plot(qaTask.list[["RBCLysis"]],subset=Tube=='CD8/CD25/CD4/CD3/CD62L')
 @
 
 With \Robject{scatterPlot} flag set as true and  \Robject{subset} properly specified plot method can generate scatter plots for the selected FCS files,
-<<plot-RBCLysis-subset2, fig=true, results=verbatim>>=
-plot(qaTask.list[["RBCLysis"]],subset="name=='06087181_F01_I010.fcs'",scatterPlot=T)
+<<plot-RBCLysis-subset2, fig=true, results=verbatim,eval=FALSE>>=
+plot(qaTask.list[["RBCLysis"]],subset=name=='06087181_F01_I010.fcs',scatterPlot=TRUE)
 @
+\includegraphics{QUALIFIER-plot-subset2}			
 
 x term in the formula is normally ignored in \Rfunction{qaCheck}.However,when "plotType" of the 
 \Rfunction{qaTask} is "bwplot", it is used as the conditioning variable that divides the data into subgroups
@@ -203,13 +204,14 @@ The red circles in the boxplot indicate the possible outlier samples and the box
 has significant variance and is marked as the group outlier. 
 
 Again,with \Robject{scatterPlot} and \Robject{subset} arguments, scatter plots can be generated for the selected FCS files or sample groups,
-<<plot-MNC-scatter, fig=true, results=verbatim>>=
+<<plot-MNC-scatter, fig=true, results=verbatim,eval=FALSE>>=
 
 plot(qaTask.list[["MNC"]]
 		,scatterPlot=TRUE
-		,subset="coresampleid==11730")
+		,subset=coresampleid==11730)
 @
-			
+\includegraphics{QUALIFIER-plot-MNC-scatter}	
+		
 We can also apply simple aggregation to the statisics through the formula.
 <<qaTask-BoundaryEvents, results=verbatim>>=
 qaTask.list[["BoundaryEvents"]]
@@ -243,7 +245,7 @@ qaCheck(qaTask.list[["MFIOverTime"]]
 
 plot(qaTask.list[["MFIOverTime"]]
 		,y=MFI~RecdDt|stain
-		,subset="channel%in%c('FITC-A')"
+		,subset=channel%in%c('FITC-A')
 		,rFunc=rlm
 		,relation="free"
 	)
@@ -257,7 +259,7 @@ qaCheck(qaTask.list[["spike"]]
 			,alpha=0.00001)
 
 plot(qaTask.list[["spike"]],y=spike~RecdDt|channel
-		,subset="Tube=='CD8/CD25/CD4/CD3/CD62L'&channel%in%c('FITC-A')"
+		,subset=Tube=='CD8/CD25/CD4/CD3/CD62L'&channel%in%c('FITC-A')
 	)
 
 @
@@ -275,7 +277,7 @@ qaCheck(qaTask.list[["NumberOfEvents"]]
 		,lBound=0.8*tubesEvents
 	)
 plot(qaTask.list[["NumberOfEvents"]]
-		,subset="Tube=='CD8/CD25/CD4/CD3/CD62L'"
+		,subset=Tube=='CD8/CD25/CD4/CD3/CD62L'
 	)
 @
 
@@ -289,7 +291,7 @@ tubesEvents
 qaCheck(qaTask.list[["RedundantStain"]],z.cutoff=1)
 plot(qaTask.list[["RedundantStain"]]
 		,y=percent~coresampleid|channel:stain
-		,subset="stain%in%c('CD8')"
+		,subset=stain%in%c('CD8')
 	)
 @
 
