update doc for new added slots of qaTask class and rename AllGeneric to AllGenerics

--- a/inst/doc/QUALIFIER.Rnw
+++ b/inst/doc/QUALIFIER.Rnw
@@ -59,7 +59,7 @@ library(QUALIFIER)
 Optionally, parsing xml workspace can be done in parallel mode. It can speed up the process for large datasets.
 <<loadPackage-parallel, echo=TRUE,results=hide,eval=FALSE>>=
 library(Rmpi)
-library(multicore)
+library(snowfall)
 library(ncdfFlow)
 @
 
