--- a/inst/doc/QUALIFIER.Rnw
+++ b/inst/doc/QUALIFIER.Rnw
@@ -67,7 +67,7 @@ library(ncdfFlow)
 
 
 \Rfunction{parseWorkspace} function from \Rpackage{flowWorkspace} package is used to parse the flowJo workspace.
-If Rmpi and multicore package are loaded and it will automatically switch to the parallel mode and \Robject{nslaves} arugment is used to
+If Rmpi and snowfall package are loaded and it will automatically switch to the parallel mode and \Robject{nslaves} arugment is used to
 specify the number of computing nodes used.
 <<parseWorkspace, eval=FALSE, echo=TRUE,results=verbatim>>=
 ws<-openWorkspace("~/QA_MFI_RBC_bounary_eventsV3.xml")
